appId: com.toughra.ustadmobile
env:
  TESTRESULTSDIR: "${TESTRESULTSDIR}/002_001_admin_add_new_course_and_teacher"
  TESTNAME: "002_001_admin_add_new_course_and_teacher"
---
- clearState: com.toughra.ustadmobile
- runFlow:
    file: "../common/startserver.yaml"
    env:
      CONTROLSERVER: ${CONTROLSERVER}
      TESTSERIAL: ${TESTSERIAL}
      TESTNAME: ${TESTNAME}
- runFlow: "../common/clear_state_and_get_started.yaml"
- runFlow: "../common/select_site.yaml"
- runFlow:
    file: "../common/user_login.yaml"
- runFlow:
    file: "../common/create_course_with_1teacher_1student.yaml"
    env:
      TESTCOURSENAME: "Test Course"
- tapOn: "Messages"
- tapOn:
    id: "floating_action_button"
- tapOn: "Student 1"
- tapOn: "Message"
- inputText: "Hi , I am admin, Please add your profile pic"
- tapOn: "Send"
- back
- runFlow: "../common/clear_state_and_get_started.yaml"
- runFlow: "../common/select_site.yaml"
- runFlow:
    file: "../common/user_login.yaml"
    env:
      USERNAME: "s1"
      PASSWORD: "test"
- tapOn: "Messages"
- tapOn: "Admin User"
- assertVisible: "Hi , I am admin, Please add your profile pic"
- tapOn: "Message"
- inputText: "Hi ,Sure Sir"
- tapOn: "Send"
