appId: com.toughra.ustadmobile
env:
  TESTRESULTSDIR: "build/reports/maestro/007_001_admin_enable_or_disable_user_registration_and_manage_bottom_navigation_bar/Screenshots"
onFlowStart:
  - startRecording: 007_001_admin_enable_or_disable_user_registration_and_manage_bottom_navigation_bar
  - runScript:
      file: "common/startserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
  - clearState: com.toughra.ustadmobile
onFlowComplete:
  - stopRecording
  - runScript:
      file: "common/stopserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
---
 # Admin Enable Registration and Manage Bottom Navigation Bar
- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
- runFlow:
   file: "common/admin_login.yaml"
- tapOn: "Settings"
- tapOn: "Site"
- assertVisible: "Navigation bar"
- tapOn:
    id: "floating_action_button"
- tapOn:
    id: "registration_allowed"
- tapOn: "Save"
- assertVisible: "If self-registration is enabled, you must set terms and policies in at least one language for users to accept when they register."
- tapOn:
    id: "registration_allowed"  #switch off to verify error goes or not
- tapOn: "Save"
- assertVisible:
    id: "floating_action_button" #Edit button should be visible
- tapOn:
    id: "floating_action_button"
- tapOn:
    id: "registration_allowed"
- tapOn: "Terms and policies (English)"
- tapOn:
    id: "com.toughra.ustadmobile:id/editor"
- inputText: "Terms and company policies"
- tapOn: "Done"
# manage visibility of buttons in bottom navigation bar
- tapOn: "Messages"
- tapOn: "People"
- tapOn: "Save"
- takeScreenshot: "${TESTRESULTSDIR}/user_registration_enabled"
- assertVisible: "Courses"
- assertVisible: "Library"
- assertNotVisible: "Messages"
- assertNotVisible: "People"
 # Verify New user registration is enabled and mandatory fields are filled
- runFlow: "common/clear_state_and_learning_space_new_userflow.yaml"
- runFlow: "common/select_site.yaml"
- tapOn: "Next"
- assertVisible: "This field is required" #verify the DOB field is mandatory
- tapOn: 2025
- longPressOn: 2025
- inputText: 2009
- hideKeyboard
- tapOn: 2009
- tapOn: "* Required"
- tapOn: "Next"
- extendedWaitUntil:
    visible:  "Terms and company policies"
    timeout: 10000
- tapOn: "Accept"
- tapOn: "Other options"
- assertVisible:
    below:  "Full name*"
    text: "This field is required" #verify the Fullname field's mandatory
- assertVisible:
    below:  "Gender*"
    text: "This field is required" #verify the Gender field's mandatory
- tapOn: "Full name*"
- inputText: "New User"
- tapOn: "Gender*"
- tapOn: "Female"
- tapOn: "Other options"
- tapOn: "Create username and password"
- tapOn: "Sign-up"
- assertVisible:
    below:  "Password"
    text: "This field is required" #verify the Password field's mandatory
- tapOn: "Password"
- inputText: "test1234"
- tapOn: "Sign-up"
- assertVisible: "Courses"
- assertVisible: "Library"
- assertNotVisible: "Messages"
- assertNotVisible: "People"
#Admin- Disable Registration and Restrict Navigation Bar to Library Option- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
- runFlow:
    file: "common/admin_login.yaml"
- tapOn: "Library"
- tapOn: "Settings"
- tapOn: "Site"
- tapOn:
    id: "floating_action_button"
- tapOn:
    id: "registration_allowed"
    # To verify the navigation bar settings- at least one option must be present
- tapOn: "Courses"   #switch off courses
- tapOn: "Library"  #switch off Library
- tapOn: "Save"
- assertVisible: "Please enable at least one navigation option."
- tapOn: "Library"  #switch On Library
- tapOn: "Save"
- assertVisible: "Library"
- assertNotVisible: "Courses"
- assertNotVisible: "Messages"
- assertNotVisible: "People"

#Verify New user registration is disabled
- runFlow: "common/clear_state_and_learning_space_new_userflow.yaml"
- runFlow: "common/select_site.yaml"
- assertVisible: "Learning space does not allow new user registration"
#Verify New user added can only see library - navigation bar is hidden
- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
- runFlow:
    file: "common/user_login.yaml"
    env:
      USERNAME: "newuser"
      PASSWORD: "test1234"
- assertVisible: "Library"
- assertNotVisible: "Courses"
- assertNotVisible: "Messages"
- assertNotVisible: "People"