appId: com.toughra.ustadmobile
tags:
  - checklist0
env:
  TESTRESULTSDIR: "${TESTRESULTSDIR}/007_002_panic_trigger_hide_app"
  TESTNAME: 007_002_panic_trigger_hide_app
---
- clearState: com.toughra.ustadmobile
- runFlow:
    file: "../common/startserver.yaml"
    env:
      CONTROLSERVER: ${CONTROLSERVER}
      TESTSERIAL: ${TESTSERIAL}
      TESTNAME: ${TESTNAME}
- runFlow:
    file: "../common/panic_trigger_start.yaml"
- runFlow: "../common/clear_state_and_get_started.yaml"
- runFlow: "../common/select_site.yaml"
- runFlow:
    file: "../common/user_login.yaml"
- tapOn: "Settings"
- tapOn: "Panic button app"
- tapOn: "Panic button app"
- tapOn: "Ripple"
- tapOn:
    id: "com.toughra.ustadmobile:id/panic_button_settings_unhide_code"
- tapOn: "Exit app"
- tapOn: "Hide app"
- runFlow:
    file: "../common/panic_trigger_ripple.yaml"
- launchApp # launch notepad
- assertVisible: "What's on your mind?"
- repeat:
    while:
      notVisible: "Paste"
    commands:
      - longPressOn:
          id: "com.toughra.ustadmobile:id/activity_notepad_edittext"
- tapOn: "Paste"
- launchApp
- assertVisible: "Library"
- runFlow:
    file: "../common/tear_down.yaml"