appId: com.toughra.ustadmobile
env:
  TESTRESULTSDIR: "build/reports/maestro/007_002b_user_registration_above_age_13_join_learning_space_username_password/Screenshots"
onFlowStart:
  - startRecording: 007_002b_user_registration_above_age_13_join_learning_space_username_password
  - runScript:
      file: "common/startserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
  - clearState: com.toughra.ustadmobile
onFlowComplete:
  - stopRecording
  - runScript:
      file: "common/stopserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
---
- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
#admin enable user registration
- runFlow:
   file: "common/admin_login.yaml"
- runFlow:
    file: "common/enable_user_registration.yaml"
- assertVisible: "Yes"
- runFlow: "common/clear_state_and_learning_space_new_userflow.yaml"
- runFlow: "common/select_site.yaml"
- tapOn: 2025
- longPressOn: 2025
- inputText: 2009
- hideKeyboard
- tapOn: 2009
- tapOn: "* Required"
- tapOn: "Next"
- extendedWaitUntil:
    visible:  "Terms and company policies"
    timeout: 10000
- tapOn: "Accept"
- tapOn: "Full name*"
- inputText: "User ABC"
- tapOn: "Gender*"
- tapOn: "Female"
- tapOn: "Other options"
- tapOn: "Create username and password"
- tapOn: "Password"
- inputText: "test1234"
- tapOn: "Sign-up"
- assertVisible: "Courses"


