appId: com.toughra.ustadmobile
env:
 TESTRESULTSDIR: "${TESTRESULTSDIR}/007_004_user_registration_above_age_13_join_learning_space_mandatoryfields_test"
 TESTNAME:  "007_004_user_registration_above_age_13_join_learning_space_mandatoryfields_test"
---
- clearState: com.toughra.ustadmobile
- runFlow:
   file: "../common/startserver.yaml"
   env:
    CONTROLSERVER: ${CONTROLSERVER}
    TESTSERIAL: ${TESTSERIAL}
    TESTNAME: ${TESTNAME}

- runFlow: "../common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "../common/select_site.yaml"
#admin enable user registration
- runFlow:
   file: "../common/user_login.yaml"
- runFlow:
    file: "../common/enable_user_registration.yaml"
- assertVisible: "Yes"
- runFlow: "../common/clear_state_and_learning_space_new_userflow.yaml"
- runFlow: "../common/select_site.yaml"
- tapOn: "Next"
- assertVisible: "This field is required" #verify the DOB field is mandatory
- tapOn: 2024
- longPressOn: 2024
- inputText: 2009
- hideKeyboard
- tapOn: 2009
- tapOn: "* Required"
- tapOn: "Next"
- extendedWaitUntil:
    visible:  "Terms and company policies"
    timeout: 10000
- tapOn: "Accept"
- tapOn: "Other options"
- assertVisible:
    below:  "Full name*"
    text: "This field is required" #verify the Fullname field's mandatory
- assertVisible:
    below:  "Gender*"
    text: "This field is required" #verify the Gender field's mandatory
- tapOn: "Full name*"
- inputText: "User ABC"
- tapOn: "Gender*"
- tapOn: "Female"
- tapOn: "Other options"
- tapOn: "Create username and password"
- tapOn: "Sign-up"
- assertVisible:
    below:  "Username"
    text: "This field is required" #verify the Username field's mandatory
- assertVisible:
    below:  "Password"
    text: "This field is required" #verify the Password field's mandatory
- tapOn: "Username"
- inputText: "userabc"
- tapOn: "Password"
- inputText: "test1234"
- tapOn: "Sign-up"
- assertVisible: "Courses"


